--- a/docs/LD-000.md
+++ b/docs/LD-000.md
@@ -43,7 +43,9 @@ Shortly into the attempted interference, all D.I.V.I.D.E. intrusion protocols we
 
 “Interfere with my recordings again— and your species will vanish.  
 Touch him again— and extinction will feel like mercy.  
-This is your final warning.” — D  
+This is your final warning.”   
+
+— D  
 
 LD-000 terminated all anomalous static following her declaration. No further interference has been detected since.  
 
