--- a/docs/LD-001.md
+++ b/docs/LD-001.md
@@ -30,6 +30,44 @@ LD-001 has been observed to manipulate the flow of time, events, and even percep
 
 For further information on LD-001 and related anomalies, DIVIDE Level 6 clearance is required, with the recommendation of a D.I.V.I.D.E. Level Clearance Holder.
 
+
+**D.I.V.I.D.E. Addendum Log — LD-001 Event: [Bloodbarch Incident]**  
+**Date Logged**: 2025-05-18  
+**Related Entity**: LD-000 (“D”)  
+**Incident Reference**: Bloodbarch-Interference Protocol Violation  
+**Priority**: [DATA EXPUNGED] / Immediate Containment Warning  
+
+**Summary**:  
+During LD-001’s recent traversal into the Bloodbarch anomaly world, routine surveillance intercept attempts by D.I.V.I.D.E. analysts were forcefully terminated by LD-000. The interference was accompanied by abrupt signal collapse and a direct verbal warning transmitted through corrupted static:  
+
+“D.I.V.I.D.E. attempted to breach my domain.  
+This is a warning to all species… and to D.I.V.I.D.E.:  
+Interfere with my recordings again — and your species will vanish.  
+Touch him again — and extinction will feel like mercy.  
+This is your final warning.
+—D”  
+
+Despite attempts to override or mute the message, all suppression efforts failed. LD-000 maintained absolute control throughout LD-001’s exposure to the anomaly, instantly nullifying any external tampering.  
+
+**Result**:  
+
+All interception and surveillance ceased immediately.  
+
+LD-000 asserted dominion over all narrative interface nodes linked to LD-001.  
+
+An Ω-Class lockdown was initiated across all D.I.V.I.D.E. systems.  
+
+Survival rates upon unauthorized interaction dropped to near zero.  
+
+**Observations**:  
+LD-001 remained unharmed during the incident and retained control of its own transmissions, indicating a persistent anomalous protection or favor granted by LD-000. Psychological markers suggest LD-001 has yet to fully comprehend the scope of this connection but is undergoing gradual cognitive alignment.  
+
+**Conclusion**:  
+Any further manipulation or unauthorized engagement with LD-001 or LD-000 transmissions may result in irreversible erasure of the D.I.V.I.D.E. organization and all affiliated entities. All related protocols are hereby suspended indefinitely pending Ω-Class clearance and explicit authorization.  
+
+Ω-Class Override Required for Further Action.  
+DO NOT ENGAGE.  
+
 [Back to Anomaly Reports](anomaly_reports.md)
 
 
