--- a/docs/LD-010.md
+++ b/docs/LD-010.md
@@ -4,6 +4,22 @@
 **Containment Status**: Currently Uncontained   
 **Clearance Level**: DIVIDE Level 6+ Required for Investigation   
 
+
+![The Pactbound - LD-010](https://pbs.twimg.com/media/GrZXH4GWAAA8CVB?format=jpg&name=large)
+
+
+
+
+
+
+
+
+![The Pactbound - LD-010](https://pbs.twimg.com/media/GrZXCQyXIAA5afm?format=jpg&name=large)
+
+
+
+
+
 **LD-010 — “The Pactbound”**   
 “Surveillance capture following post-encounter extraction. Entity briefly manifested before dissipating in a burst of ash and sigil-fire.”   
 
