--- a/docs/LD-010.md
+++ b/docs/LD-010.md
@@ -7,7 +7,7 @@
 
 ![The Pactbound - LD-010](https://pbs.twimg.com/media/GrZXH4GWAAA8CVB?format=jpg&name=large)
 
-
+"Picture taken from inside a in "game" or in alternative world it is theorized to be her true form"
 
 
 
@@ -17,7 +17,7 @@
 ![The Pactbound - LD-010](https://pbs.twimg.com/media/GrZXCQyXIAA5afm?format=jpg&name=large)
 
 
-
+"Picture taken by a standart photo camera AT-8488 sacraficed for her to willingly take the picture her in real life form"
 
 
 **LD-010 — “The Pactbound”**   
