--- a/docs/LD-010.md
+++ b/docs/LD-010.md
@@ -1,6 +1,6 @@
 **File: LD-010 — “The Pactbound”**   
 **Designation**: Contractual Entity / Temporal Parasite   
-**Threat Level**: Class III   
+**Threat Level**: Class III   WARNING: “Threat level to be escalated to Class IV if influence metrics cross containment threshold. Current projection suggests exponential risk curve with each successful pact.”   
 **Containment Status**: Currently Uncontained   
 **Clearance Level**: DIVIDE Level 6+ Required for Investigation   
 
