--- a/docs/LD-010.md
+++ b/docs/LD-010.md
@@ -78,6 +78,12 @@ Recording and transcription of all verbal exchanges
 
 Any new phrases or sigils discovered should be submitted to the DIVIDE Linguistics Vault.   
 
+
+***Known Connections:***  
+LD-001  
+
+
+
 **Internal Note**   
 “She isn’t selling anything. She’s buying.”   
 “Every ‘yes’ strengthens her form. Every ‘no’ makes her smile wider.”   
