--- a/docs/LD-011.md
+++ b/docs/LD-011.md
@@ -1,1 +1,44 @@
+**File: LD-011 — “The Echo-Faced”**  
+**Designation**: Ghostly Entity / Psychological Parasite  
+**Threat Level**: Class III  
+**Containment Status**: Quarantine / Audio Isolation  
+**Clearance Level**: DIVIDE Level 3+  
 
+**Description**  
+LD-011 appears as a female ghostly figure wearing a smooth, expressionless white mask that perfectly mimics the face of the person observing her. Her form is semi-transparent and shifts softly like a fading apparition.  
+
+She does not speak at first, instead remaining eerily still and watching silently. After prolonged eye contact, she begins to mimic the victim’s voice in a haunting, whispering echo.  
+
+Exposure causes intense psychological effects: victims hear distorted whispers of their own voice repeating doubts, fears, and personal secrets. Over time, this breaks down the victim’s sense of identity, causing confusion, dissociation, and eventual loss of free will.  
+
+Once fully affected, victims behave as if possessed—repeating cryptic phrases in their own voice and losing all memory of their previous selves.  
+
+**Behavioral Traits**  
+Female ghostly apparition with shifting translucent form  
+
+Wears a smooth, expressionless mask mirroring the observer’s face  
+
+Silent initially, later mimics voice and expressions in whispers  
+
+Causes auditory hallucinations and psychological breakdown  
+
+Only visible clearly to the targeted individual  
+
+**Recorded Incident**  
+Subject AT-4521 locked eyes with LD-011 for 90 seconds before fainting. Following this, the subject was heard whispering, “Who am I now?” repeatedly and became unresponsive to all external stimuli. Recovery attempts failed.  
+
+**Containment Protocol**  
+Isolate in soundproof, darkened chambers with reinforced containment barriers  
+
+No direct visual or verbal contact permitted without protective gear  
+
+Personnel must wear noise-cancelling headsets and reflective visors during interaction  
+
+White noise generators and light distortions employed to disrupt entity focus  
+
+**Internal Note**  
+“She’s not just watching — she’s waiting to become you.”  
+
+© 2025 Lucas Devil. All Rights Reserved.  
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.  
+First created: 2025-05-21  
