--- a/docs/LD-011.md
+++ b/docs/LD-011.md
@@ -24,6 +24,22 @@ Causes auditory hallucinations and psychological breakdown
 
 Only visible clearly to the targeted individual  
 
+Visible normally but very difficult to notice  
+
+Exhibits predatory behavior by compelling fully controlled victims to approach her  
+
+Removes faces of victims upon loss of interest, destroying them physically and metaphysically  
+
+
+
+**End of exposure effects**  
+Once victims lose all free will, LD-011 draws them closer with an irresistible compulsion. When she deems them no longer useful, she violently tears their face off, leaving behind a hollow shell that collapses into nothingness.  
+
+
+
+
+
+
 **Recorded Incident**  
 Subject AT-4521 locked eyes with LD-011 for 90 seconds before fainting. Following this, the subject was heard whispering, “Who am I now?” repeatedly and became unresponsive to all external stimuli. Recovery attempts failed.  
 
