--- a/docs/LD-011.md
+++ b/docs/LD-011.md
@@ -4,6 +4,10 @@
 **Containment Status**: Quarantine / Audio Isolation  
 **Clearance Level**: DIVIDE Level 3+  
 
+
+![LD-011 Realistic Portrait](https://pbs.twimg.com/media/GreMKBfX0AA7cGc?format=jpg&name=large)
+"Picture was taken with a standard camera"
+
 **Description**  
 LD-011 appears as a female ghostly figure wearing a smooth, expressionless white mask that perfectly mimics the face of the person observing her. Her form is semi-transparent and shifts softly like a fading apparition.  
 
