--- a/docs/LD-012.md
+++ b/docs/LD-012.md
@@ -1,1 +1,37 @@
+**File: LD-012 — “The Molded”**  
+**Designation**: Biological Entity / Parasitic Biomass  
+**Threat Level**: Class III  
+**Containment Status**: Quarantine Zone Established  
+**Clearance Level**: DIVIDE Level 5+ Required for Interaction  
 
+**LD-012 — “The Molded”**  
+“Captured footage from quarantine sector. Entity exhibits aggressive territorial behavior and rapid regeneration.”  
+
+**Description**  
+LD-012 consists of humanoid-like creatures formed from an unknown fungal biomass that assimilates organic material. They display high aggression, coordinated hunting behavior, and an uncanny ability to regenerate damaged tissue almost instantaneously. The Molded appear to be linked through a hive-mind-like consciousness but can act independently when necessary.  
+
+The Molded originate from an anomalous fungal infection spreading within a derelict plantation estate. Exposure causes rapid mutation of the host into a Molded entity, with near-total loss of prior personality and control.  
+
+**Behavioral Traits**
+Rapid regeneration; resistant to conventional weapons  
+
+Hive-minded but capable of independent ambush tactics  
+
+Emits spores that cause disorientation and hallucinations in targets  
+
+Vulnerable to extreme heat and targeted chemical agents  
+
+**Containment Protocol**  
+The original containment zone was incinerated completely by B.E.S.E.R.K Squad. Two Molded and one sample are currently held in a containment cell at -200°C. No testing is allowed outside designated testing zones without DIVIDE Level researcher approval. When left alone, Molded multiply at astonishing rates; in one test, two Molded grew to seventeen within an hour. Under no circumstances should testing occur outside Foundation zones.  
+
+Molded can be killed relatively easily by aiming at the head with sufficient ammunition or using flamethrowers. Tests indicate approximately eight 9mm rounds to a single head are required to neutralize the Molded. If a Molded has two heads, approximately sixteen rounds are necessary.  
+
+**Internal Note**  
+“Not just infected—they’re an extension of the infection.”  
+
+
+
+
+© 2025 Lucas Devil. All Rights Reserved.  
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.  
+First created: 2025-05-21  
