--- a/docs/LD-012.md
+++ b/docs/LD-012.md
@@ -4,6 +4,10 @@
 **Containment Status**: Quarantine Zone Established  
 **Clearance Level**: DIVIDE Level 5+ Required for Interaction  
 
+
+![LD-012 — “The Molded”](https://pbs.twimg.com/media/GreWsyjXwAA9kch?format=png&name=900x900)
+
+
 **LD-012 — “The Molded”**  
 “Captured footage from quarantine sector. Entity exhibits aggressive territorial behavior and rapid regeneration.”  
 
