--- a/docs/LD-012.md
+++ b/docs/LD-012.md
@@ -5,7 +5,7 @@
 **Clearance Level**: DIVIDE Level 5+ Required for Interaction  
 
 
-![LD-012 — “The Molded”](https://pbs.twimg.com/media/GreWsyjXwAA9kch?format=png&name=900x900)
+![LD-012 — “The Molded”](https://pbs.twimg.com/media/GreXcqcXMAA3QsM?format=jpg&name=large)
 
 
 **LD-012 — “The Molded”**  
