--- a/docs/LD-013.md
+++ b/docs/LD-013.md
@@ -1,1 +1,55 @@
+**File: LD-013 — “The Insect Matron”**  
+**Designation**: Bio-Ethereal Entity / Hive-Class Parasite  
+**Threat Level**: Class IV (High-Risk Tier)  
+**Containment Status**: Active Thermal Suppression  
+**Clearance Level**: DIVIDE Level 5 Required for Interaction  
 
+**LD-013 — “The Insect Matron”**  
+"Thermal image shows subject partially submerged in larval biomass. Immediate area remains at 1800°C to suppress reproductive activity."  
+
+**Description**  
+LD-013, also known as “The Insect Matron,” is a towering, emaciated humanoid organism fused with a biomechanical hive structure. Her skin is coated in hardened black chitin; her limbs are grotesquely elongated; her abdomen swells and pulses like a living nest.  
+
+She exhibits near-immortal regenerative abilities, terrifying adaptability, and control over insect lifeforms in a 500-meter radius. LD-013 can mutate insects to extreme, biologically impossible sizes—documented cases include:  
+
+Centipedes the size of large dogs  
+
+Spiders with six-foot leg spans  
+
+Fist-sized leeches  
+
+Mosquitoes capable of draining adult humans within seconds  
+
+**Known Capabilities**  
+
+Insect Domination: Direct control over any insectoid organism within range  
+
+Mutation Burst: Instantaneously mutates surrounding insects into monstrous versions  
+
+Subterranean Hive-Weaving: Burrows and creates entire tunnel systems, expanding territory undetected  
+
+City-Sized Nest Growth: Can build massive hives underground, spreading upward in months  
+
+Insane Regeneration: Survives thousands of rounds; regenerates limbs within 30 minutes  
+
+Extreme Speed and Reflexes: Evades most conventional weapons without slowing  
+
+Mimicry and Pheromonal Control: Lures victims with voice imitation and chemical triggers  
+
+**Containment Protocol**  
+Currently contained in Thermal Suppression Chamber Theta-6, where temperatures remain above 1800°C to ensure no insect life survives and no egg production occurs. She is in a permanent burning state.  
+
+Attempts at communication have failed. She has refused all cooperation and has made repeated escape attempts using redirected swarms and tunneling strategies.  
+
+Use of incendiary rounds, flamethrowers, napalm, and area-wide firebombing has proven effective in driving her back.  
+While ballistic missiles were once deployed, she used swarms to intercept them mid-flight, rendering their use inefficient and high-risk.  
+
+She is to be kept alive only for research purposes. Upon conclusion of studies, immediate termination has been authorized.  
+
+**Internal Note**  
+"She doesn’t build a hive. She builds an ecosystem. Burn it, or we become part of it."  
+
+
+© 2025 Lucas Devil. All Rights Reserved.  
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.  
+First created: 2025-05-21  
