--- a/docs/LD-013.md
+++ b/docs/LD-013.md
@@ -4,6 +4,11 @@
 **Containment Status**: Active Thermal Suppression  
 **Clearance Level**: DIVIDE Level 5 Required for Interaction  
 
+
+![Insect Mother - Drone Footage](https://pbs.twimg.com/media/GrerbmQWMAAVC5b?format=jpg&name=large)
+"Picture taken via drone"
+
+
 **LD-013 — “The Insect Matron”**  
 "Thermal image shows subject partially submerged in larval biomass. Immediate area remains at 1800°C to suppress reproductive activity."  
 
