--- a/docs/LD-013.md
+++ b/docs/LD-013.md
@@ -2,7 +2,7 @@
 **Designation**: Bio-Ethereal Entity / Hive-Class Parasite  
 **Threat Level**: Class IV (High-Risk Tier)  
 **Containment Status**: Active Thermal Suppression  
-**Clearance Level**: DIVIDE Level 5 Required for Interaction  
+**Clearance Level**: DIVIDE Level 5+ Required for Interaction  
 
 
 ![Insect Mother - Drone Footage](https://pbs.twimg.com/media/GrerbmQWMAAVC5b?format=jpg&name=large)
