--- a/docs/LD-013.md
+++ b/docs/LD-013.md
@@ -13,7 +13,7 @@
 "Thermal image shows subject partially submerged in larval biomass. Immediate area remains at 1800°C to suppress reproductive activity."  
 
 **Description**  
-LD-013, also known as “The Insect Matron,” is a towering, emaciated humanoid organism fused with a biomechanical hive structure. Her skin is coated in hardened black chitin; her limbs are grotesquely elongated; her abdomen swells and pulses like a living nest.  
+LD-013, also known as “The Insect Matron,” is a towering, emaciated humanoid organism fused with a biomechanical hive structure. Her skin is coated in hardened black chitin; her limbs are grotesquely elongated; her abdomen swells and pulses like a living nest.  PHANTOM and APA were dispatched to contain LD-013.
 
 She exhibits near-immortal regenerative abilities, terrifying adaptability, and control over insect lifeforms in a 500-meter radius. LD-013 can mutate insects to extreme, biologically impossible sizes—documented cases include:  
 
