--- a/docs/LD-013.md
+++ b/docs/LD-013.md
@@ -19,6 +19,12 @@ She exhibits near-immortal regenerative abilities, terrifying adaptability, and 
 
 Centipedes the size of large dogs  
 
+Biological Origin: Unknown / potentially human host  
+
+Auditory Cues: Victims report “buzzing whispers” before attacks.
+
+
+
 Spiders with six-foot leg spans  
 
 Fist-sized leeches  
@@ -43,6 +49,18 @@ Mimicry and Pheromonal Control: Lures victims with voice imitation and chemical 
 
 **Containment Protocol**  
 Currently contained in Thermal Suppression Chamber Theta-6, where temperatures remain above 1800°C to ensure no insect life survives and no egg production occurs. She is in a permanent burning state.  
+
+Heat Sensors & Auto-Napalm Triggers: In case of escape attempt.  
+
+Drone Surveillance: She's considered a top breakout risk.  
+
+Feeding/Interaction Protocol: Only done remotely or via disposable drones.  
+
+Quarantine Buffer: No biological life allowed within 1km of the chamber only researchers.  
+
+In case of containment breach, full incineration sweep of Sector 9 is to be initiated within 90 seconds. Survivors are to be considered compromised and quarantined.  
+
+Voice Suppression Field: In case she can lure insects psychically.  
 
 Attempts at communication have failed. She has refused all cooperation and has made repeated escape attempts using redirected swarms and tunneling strategies.  
 
