--- a/docs/LD-014.md
+++ b/docs/LD-014.md
@@ -35,3 +35,11 @@ Any personnel exhibiting obsessive behavior toward LD-014 are to be quarantined 
 **Internal Note**:  
 “It's not the knife that's dangerous. It's how she makes you feel while you die.”  
 – Dr. REDACTED, terminated following unsanctioned exposure  
+
+
+
+
+
+© 2025 Lucas Devil. All Rights Reserved.  
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.  
+First created: 2025-05-27  
