--- a/docs/LD-014.md
+++ b/docs/LD-014.md
@@ -5,7 +5,7 @@
 **Clearance Level**: DIVIDE Level 3+  
 
 
-!(https://pbs.twimg.com/media/Gr92sfkXoAAH4Ol?format=jpg&name=large)
+![description](https://pbs.twimg.com/media/Gr92sfkXoAAH4Ol?format=jpg&name=large)
 
 
 **Description**:  
