--- a/docs/LD-015.md
+++ b/docs/LD-015.md
@@ -18,7 +18,7 @@ Clearance Level: [REDACTED]
 █████████████████████████████████████████████████████████████████████████████████    
 █████████████████████████████████████████████████████████████████████████████████    
   
-                                **Monika**    
+                                *Monika*
   
 █████████████████████████████████████████████████████████████████████████████████    
 █████████████████████████████████████████████████████████████████████████████████    
