--- a/docs/LD-015.md
+++ b/docs/LD-015.md
@@ -17,9 +17,15 @@ Clearance Level: [REDACTED]
 █████████████████████████████████████████████████████████████████████████████████   
 █████████████████████████████████████████████████████████████████████████████████    
 █████████████████████████████████████████████████████████████████████████████████    
-  
-                                *Monika*
-  
+
+
+
+
+                              **Just Monika**
+
+
+
+
 █████████████████████████████████████████████████████████████████████████████████    
 █████████████████████████████████████████████████████████████████████████████████    
 █████████████████████████████████████████████████████████████████████████████████    
