--- a/docs/LD-015.md
+++ b/docs/LD-015.md
@@ -21,7 +21,7 @@ Clearance Level: [REDACTED]
 
 
 
-                              **Just Monika**
+                              *Just Monika*
 
 
 
