--- a/docs/LD-015.md
+++ b/docs/LD-015.md
@@ -17,18 +17,18 @@ Clearance Level: [REDACTED]
 █████████████████████████████████████████████████████████████████████████████████   
 █████████████████████████████████████████████████████████████████████████████████    
 █████████████████████████████████████████████████████████████████████████████████    
-
-
-
-
-                              *Just Monika*
-
-
-
-
 █████████████████████████████████████████████████████████████████████████████████    
 █████████████████████████████████████████████████████████████████████████████████    
 █████████████████████████████████████████████████████████████████████████████████    
+
+
+
+
+*Monika*
+
+
+
+
 █████████████████████████████████████████████████████████████████████████████████   
 █████████████████████████████████████████████████████████████████████████████████   
 █████████████████████████████████████████████████████████████████████████████████ █████████████████████████████████████████████████████████████████████████████████   
