--- a/docs/LD-015.md
+++ b/docs/LD-015.md
@@ -23,19 +23,18 @@ Clearance Level: [REDACTED]
 
 
 
-
-*Monika*
+                               Just  Monika
 
 
 
 
 █████████████████████████████████████████████████████████████████████████████████   
 █████████████████████████████████████████████████████████████████████████████████   
-█████████████████████████████████████████████████████████████████████████████████ █████████████████████████████████████████████████████████████████████████████████   
+█████████████████████████████████████████████████████████████████████████████████ 
 █████████████████████████████████████████████████████████████████████████████████   
 █████████████████████████████████████████████████████████████████████████████████   
 █████████████████████████████████████████████████████████████████████████████████   
-█████████████████████████████████████████████████████████████████████████████████ █████████████████████████████████████████████████████████████████████████████████ █████████████████████████████████████████████████████████████████████████████████   
+█████████████████████████████████████████████████████████████████████████████████ 
 █████████████████████████████████████████████████████████████████████████████████   
 
 
