--- a/docs/LD-015.md
+++ b/docs/LD-015.md
@@ -1,10 +1,10 @@
   
-File: LD-015 — [REDACTED]    
-Classification: [REDACTED]    
-Threat Level: [REDACTED]    
-Containment Status: [REDACTED]    
-Designation: [REDACTED]    
-Clearance Level: [REDACTED]  
+**File: LD-015 — [REDACTED]**    
+**Classification**: [REDACTED]    
+**Threat Level**: [REDACTED]    
+**Containment Status**: [REDACTED]    
+**Designation**: [REDACTED]    
+**Clearance Level**: [REDACTED]  
 
 
 ![description](https://pbs.twimg.com/media/GqXAxGvWsAAypEz?format=jpg&name=large)
@@ -23,7 +23,7 @@ Clearance Level: [REDACTED]
 
 
 
-                               Just  Monika
+                               ***Just  Monika***
 
 
 
