--- a/docs/LD-016.md
+++ b/docs/LD-016.md
@@ -2,6 +2,7 @@
 **Designation**: Sentient Object / Bonded Weapon  
 **Threat Level**: Class II (Conditional Use / Moderate Risk)  
 **Containment Status**: Secured Armory Vault, Level 3, locked by biometric and bloodline authorization  
+**Clearance Level**: DIVIDE Level 3+  
 
 
 
