--- a/docs/LD-017.md
+++ b/docs/LD-017.md
@@ -10,7 +10,7 @@
 ![](https://pbs.twimg.com/media/Gr-o4m2XIAAOyu7?format=jpg&name=large)
 
 
-
+"picture taken by a issued phone"  
 
 **Description**:  
 LD-017 is a blackened bone-and-silver amulet with unknown markings that shift when observed it is palm sized. When held, the bearer is immediately imprinted with knowledge of a basic summoning ritual — enough to summon low-tier demonic entities after offering one human sacrifice to "charge" the trinket.  
