--- a/docs/LD-016.md
+++ b/docs/LD-016.md
@@ -11,7 +11,7 @@
 
 
 
-
+"Picture taken by a camera"  
 
 **Description**:  
 LD-016 is a well-worn, antique revolver of unknown manufacture. The revolver possesses seemingly infinite ammunition, with bullets mysteriously replenishing after every discharge. Tests confirm no conventional means of refilling the chambers are possible.  
