--- a/docs/LD-014.md
+++ b/docs/LD-014.md
@@ -7,6 +7,7 @@
 
 ![description](https://pbs.twimg.com/media/Gr92sfkXoAAH4Ol?format=jpg&name=large)
 
+"Picture taken by a camera"
 
 **Description**:  
 LD-014 is an ornate, violet-hued ceremonial dagger of unknown origin. Despite intensive analysis, it has proven utterly indestructible. Material composition is unidentifiable. The blade is capable of slicing through any known substance, including Class IV anomalies such as LD-013 (“Insect Matron”).  
