--- a/docs/LD-018.md
+++ b/docs/LD-018.md
@@ -13,7 +13,7 @@
 
  **Summary**:  
 This anomaly, believed to originate from the entity responsible for the “Assessment Examination” events, was a shapeshifter mimicking lost or isolated individuals. It gained access to high-clearance facilities by replicating voices, emotions, and memories. The  
- subject was indistinguishable from its target in both speech and behavior, leading to multiple containment breaches and at least 4 APA personnel casualties.  
+ subject was indistinguishable from its target in both speech and behavior.  
 
  **Termination Report**:  
 Subject was neutralized after containment breach #3 when APA Operator J. Kardos deployed experimental cryo-rounds followed by incendiary treatment. Subject responded with violent spasms and vocal distortions before collapsing. Post-mortem analysis revealed no internal organs — only a thick black fluid that immediately evaporated upon exposure to oxygen.  
