--- a/docs/LD-019.md
+++ b/docs/LD-019.md
@@ -2,6 +2,7 @@
 **Status**: Active  
 **Threat Level**: Class II  
 **Designation**: “The House Always Wins”  
+**Classification**: Structure annomaly/ Building anomaly  
 **Clearance Required**: Public Access — No Clearance Needed  
 
 
@@ -60,3 +61,6 @@ It is considered Class 2 due to its regenerative nature and global influence but
 © 2025 Lucas Devil. All Rights Reserved.  
 D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.  
 First created: 2025-05-28  
+
+
+
