--- a/docs/LD-021.md
+++ b/docs/LD-021.md
@@ -1,1 +1,42 @@
+**File: LD-021 — “Velocity Pills”**  
+**Designation**: Anomalous Chemical Substance / Psychoactive Drug  
+**Threat Level**: Class I  
+**Containment Status**: Secure Storage / Controlled Access  
+**Clearance Level**: DIVIDE Level 2+  
 
+
+
+
+
+
+**LD-021 Sample Photo**  
+(Photo taken in a secure lab environment)  
+
+**Description**  
+LD-021 consists of small, translucent blue pills with a faint shimmering surface. When ingested, the pills grant the user an extraordinary increase in speed and reflexes lasting approximately 60 seconds. During this time, subjects report feelings of euphoria and heightened awareness.  
+
+Once the effect subsides, users experience severe psychological backlash characterized by intense madness, paranoia, hallucinations, and mental breakdowns. Repeated or excessive consumption significantly increases the risk of fatal self-harm or suicide attempts.  
+
+**Behavioral Effects**  
+
+Immediate onset of superhuman speed and reflexes (duration ~1 minute)  
+
+Post-effect psychosis including paranoia and hallucinations  
+
+Risk of suicide or violent self-injury with excessive dosage  
+
+Physical exhaustion and extreme disorientation following use  
+
+**Containment Protocol**  
+
+LD-021 samples stored in secured, locked containment vaults with biometric access  
+
+Access limited to medical and research personnel under supervision  
+
+Psychological evaluations mandatory for anyone exposed  
+
+Disposal of excess pills by incineration only  
+
+© 2025 Lucas Devil. All Rights Reserved.  
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.  
+First created: 2025-05-29  
