--- a/docs/LD-021.md
+++ b/docs/LD-021.md
@@ -6,7 +6,7 @@
 
 
 
-
+!(https://pbs.twimg.com/media/GsHqAQqXAAACN1d?format=jpg&name=large)
 
 
 **LD-021 Sample Photo**  
@@ -16,6 +16,9 @@
 LD-021 consists of small, translucent blue pills with a faint shimmering surface. When ingested, the pills grant the user an extraordinary increase in speed and reflexes lasting approximately 60 seconds. During this time, subjects report feelings of euphoria and heightened awareness.  
 
 Once the effect subsides, users experience severe psychological backlash characterized by intense madness, paranoia, hallucinations, and mental breakdowns. Repeated or excessive consumption significantly increases the risk of fatal self-harm or suicide attempts.  
+
+There are only 11 pill's left as of now more pill's can be obtained thru deals with LD-010.  
+
 
 **Behavioral Effects**  
 
