--- a/docs/LD-022.md
+++ b/docs/LD-022.md
@@ -18,6 +18,8 @@ LD-022, referred to as “Bloodbarch,” is a tree species resembling a twisted,
 
 This fluid is chemically and visually indistinguishable from human blood and contains psycho-reactive compounds that induce a compulsive effect in humans. Any individual coming into direct contact with the fluid experiences an overwhelming urge to return to the tree, regardless of distance, and ultimately kill themselves at its roots. This effect is believed to serve the tree’s need for organic matter, particularly blood and bone, as fertilizer.  
 
+The tree it self can be used for medication against cancer and other hard to cure illnesses but farming these trees is as of now very limited.
+
 **Behavioral Traits**  
 Bleeds heavily when cut, spraying blood-like fluid several meters  
 
