--- a/docs/LD-025.md
+++ b/docs/LD-025.md
@@ -1,6 +1,6 @@
 **File: LD-025 — “The Red Stalker”**  
 **Designation**: Persistent Predatory Entity / Low-Yield Anomaly  
-**Threat Level**: Class I  
+**Threat Level**: Class II  
 **Containment Status**: Uncontained (Active Field Hunt Pending)  
 **Clearance Level**: DIVIDE Level 2+  
 
@@ -65,6 +65,8 @@ Immediate termination approved by Task Force 3-Delta ("Red Watch")
 Survivors of stalking events are advised to retaliate with lethal force immediately  
 
 No further research is planned as LD-025 has no replicable anomaly, no profitable byproduct, and poses a high civilian risk.  
+
+LD-025 is here by sentenced to death shoot to kill.  
 
 **Internal Note**  
 
