--- a/docs/LD-026.md
+++ b/docs/LD-026.md
@@ -16,7 +16,7 @@
 (Image Redacted — Class III Visual Allure Warning)  
 
 **Description**  
-LD-026 appears to be a human woman in her mid-20s, of unknown origin, with long blond hair braided down her back, pale skin, and strikingly symmetrical facial features. Every observer — regardless of prior attraction preferences — describes her as “beautiful,” “ethereal,” or “irresistible,” particularly male subjects.  
+LD-026 appears to be a human woman in her mid-20s, of unknown origin, with long blond hair braided down her back she can change her hair collor at will if asked, pale skin, and strikingly symmetrical facial features. Every observer — regardless of prior attraction preferences — describes her as “beautiful,” “ethereal,” or “irresistible,” particularly male subjects.  
 
 LD-026 seeks out romantic partners and enters into relationships that initially appear loving, stable, and fulfilling. However, an anomalous compulsion rapidly develops in her chosen partner:  
 
