--- a/docs/LD-027.md
+++ b/docs/LD-027.md
@@ -6,8 +6,12 @@
 
 
 
+![](https://pbs.twimg.com/media/GsTvwvkXMAElQ38?format=jpg&name=large)  
 
 
+
+
+"Photo taken when discovered with a standart issue phone"  
 
 
 **LD-027 Terminal Capture**  
