--- a/docs/LD-028.md
+++ b/docs/LD-028.md
@@ -1,4 +1,4 @@
-**File: LD-028 — “Its a fucking UFO”**  
+**File: LD-028 — “It’s a Fking UFO”**  
 **Designation**: Anomalous Object / Operational Alien Spacecraft  
 **Threat Level**: Class II  
 **Containment Status**: High-Security Hangar / Disarmed  
@@ -10,40 +10,40 @@
 
 
 
-
 **LD-028 Exterior Photo**  
-(Photo taken in high-security containment hangar)  
+(Yeah. It’s literally a goddamn UFO. Taken in secured hangar.)  
 
 **Description**  
-LD-028 is an operational extraterrestrial spacecraft of unknown origin, currently empty of any biological life. Evidence suggests all alien occupants were eliminated prior to discovery. The vessel retains full functionality, including propulsion, internal systems, and defensive capabilities, though all weapons have been disabled for containment purposes.  
+LD-028 is an actual flying saucer. Not metaphorically. It’s a full-ass, chrome-plated, interstellar spacecraft found abandoned in a remote mountainous region. No life signs were detected. Forensics suggest the original occupants (presumably aliens) either died fighting something or were killed before discovery.  
 
-The ship’s interior features advanced technology beyond current human understanding, with numerous consoles and panels still active. Despite the absence of living occupants, the vessel emits occasional unexplained energy surges and faint, ghostly sounds within its corridors.  
+The ship is intact, operational, and looks like something out of 1960s paranoia-fueled sci-fi—except it’s real and its systems are far more advanced than anything humanity has achieved. It can fly. It can shoot. It can apparently cloak. That’s why it’s locked the hell down.  
 
-**Behavioral Traits**  
+**Strange Behavior**  
 
-Fully operational, though devoid of life  
- 
-Emits intermittent energy pulses and sounds  
+Makes weird internal “whispers” and system hums with no known source  
 
-Exterior hull highly resistant to conventional weaponry  
+Shifts internal geometry (slightly) when no one’s watching  
 
-Interior layout is labyrinthine and changes subtly over time  
+Outer hull is nearly indestructible  
 
-No known alien presence onboard; presumed extinct  
+Can activate autonomously for brief periods  
+
+Emits occasional distress signals in unknown frequencies  
 
 **Containment Protocol**  
 
-Stored in a reinforced hangar with electromagnetic dampeners  
+Housed in Sub-Level Hangar 9, behind triple-lock magnetic fields  
 
-Weapon systems deactivated and monitored remotely  
+All power cores removed and sealed separately  
 
-No personnel allowed onboard without DIVIDE Level 4 clearance and escort  
+Entry prohibited unless under emergency review by 2+ Level 4 personnel  
 
-Continuous surveillance for anomalous activity or reactivation  
+Weekly scans for reactivation signals  
 
-**Internal note**
-D.I.V.I.D.E. level researchers first word's 
-"Its a fucking UFO i expected anything but a fucking UFO anomaly what the fuck..."
+**Notes**  
+
+“We’re calling it what it is. It’s a f**king UFO. And it's staying in the hangar until we figure out if it wants to kill us or help us leave this rock.”  
+—REDACTED, D.I.V.I.D.E. Research Lead  
 
 
 
